force-app/main/default/objects/ServiceAppointment/fields/Ata__c.field-meta.xml
<CustomField>
    <fullName>Ata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vinculo Ata</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Visitas</relationshipLabel>
    <relationshipName>Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>