force-app/main/default/objects/ServiceAppointment/fields/Atendente__c.field-meta.xml
<CustomField>
    <fullName>Atendente__c</fullName>
    <label>Atendente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALINE QUARESMA DA SILVA</fullName>
            </value>
            <value>
                <fullName>ALLAN JUNIO DA COSTA SILVA</fullName>
            </value>
            <value>
                <fullName>BRUNA ISABELLA LEANDRO DA SILVA SANTANA</fullName>
            </value>
            <value>
                <fullName>CAROLINA MENDES BAIA DE CARVALHO</fullName>
            </value>
            <value>
                <fullName>DANIELA FERREIRA DA SILVA</fullName>
            </value>
            <value>
                <fullName>DARLENE APARECIDA ANDRADE SILVA</fullName>
            </value>
            <value>
                <fullName>DEBORA STEFANY SOUZA</fullName>
            </value>
            <value>
                <fullName>EDUARDA ANDRADE FERREIRA</fullName>
            </value>
            <value>
                <fullName>ELIZANGELA DE LOURDES DA SILVA FREITAS</fullName>
            </value>
            <value>
                <fullName>ESTHER CAROLAINE MARTINS DE SOUZA</fullName>
            </value>
            <value>
                <fullName>FERNANDA CONCEICAO PEREIRA</fullName>
            </value>
            <value>
                <fullName>GIULIA MAGALHAES SANTOS</fullName>
            </value>
            <value>
                <fullName>HELOISA BATISTA HONORIO</fullName>
            </value>
            <value>
                <fullName>HUDSON BRENO SANTOS AGANETE ANDRADE</fullName>
            </value>
            <value>
                <fullName>ISABELE MONTEIRO GONCALVES</fullName>
            </value>
            <value>
                <fullName>ISADORA MULLER DE OLIVEIRA</fullName>
            </value>
            <value>
                <fullName>JAISON FERNANDO FERREIRA DA SILVA</fullName>
            </value>
            <value>
                <fullName>JUCYMARA FERREIRA CORREIA</fullName>
            </value>
            <value>
                <fullName>LEONARDO RODRIGUES MARIANO</fullName>
            </value>
            <value>
                <fullName>LUCELIA RABELO COSTA SILVA</fullName>
            </value>
            <value>
                <fullName>RAFAEL REIS DA SILVA</fullName>
            </value>
            <value>
                <fullName>RENAN MARCOS MATOZINHOS SILVA</fullName>
            </value>
            <value>
                <fullName>RODRIGO DORNELLAS DE PINHO</fullName>
            </value>
            <value>
                <fullName>SHANDEL REIS MENEZES</fullName>
            </value>
            <value>
                <fullName>ISABELA CRISTINA SILVA SCHINAIDER</fullName>
            </value>
            <value>
                <fullName>ANA CAROLINA SILVA SOARES</fullName>
            </value>
            <value>
                <fullName>INES CRISTINA DE ARAUJO</fullName>
            </value>
            <value>
                <fullName>EZEQUIEL JUNIO DA SILVA</fullName>
            </value>
            <value>
                <fullName>LARISSA MILENY DE PAIVA SILVA</fullName>
            </value>
            <value>
                <fullName>NATIELLE DE ASSIS CARVALHO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>