force-app/main/default/objects/ServiceAppointment/fields/AtendimentoCallCenter__c.field-meta.xml
<CustomField>
    <fullName>AtendimentoCallCenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atendimento Call Center</label>
    <type>Checkbox</type>
</CustomField>