force-app/main/default/objects/ServiceAppointment/fields/CanalDoCriador__c.field-meta.xml
<CustomField>
    <fullName>CanalDoCriador__c</fullName>
    <formula>TEXT( CreatedBy.CANAL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal do Criador</label>
    <type>Text</type>
</CustomField>