force-app/main/default/objects/ServiceAppointment/fields/CanalDoRecursoDeServico__c.field-meta.xml
<CustomField>
    <fullName>CanalDoRecursoDeServico__c</fullName>
    <formula>TEXT( ServiceResource__r.Owner:User.CANAL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal do Recurso de Serviço</label>
    <type>Text</type>
</CustomField>