force-app/main/default/objects/ServiceAppointment/fields/CanalEntrada__c.field-meta.xml
<CustomField>
    <fullName>CanalEntrada__c</fullName>
    <formula>TEXT(  Lead__r.CanalEntrada__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal de Entrada</label>
    <type>Text</type>
</CustomField>