force-app/main/default/objects/ServiceAppointment/fields/Carga__c.field-meta.xml
<CustomField>
    <fullName>Carga__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carga</label>
    <type>Checkbox</type>
</CustomField>