force-app/main/default/objects/ServiceAppointment/fields/Classificacao__c.field-meta.xml
<CustomField>
    <fullName>Classificacao__c</fullName>
    <formula>TEXT(Lead__r.Rating)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classificação</label>
    <type>Text</type>
</CustomField>