force-app/main/default/objects/ServiceAppointment/fields/CompetenciaCriacao__c.field-meta.xml
<CustomField>
    <fullName>CompetenciaCriacao__c</fullName>
    <formula>CASE(1,
IF(((  CreatedDate &gt;= DATETIMEVALUE(&apos;2020-12-17 00:00:00&apos;) &amp;&amp; CreatedDate &lt;= DATETIMEVALUE(&apos;2021-01-20 23:59:59&apos;)) || ISBLANK(CreatedDate)),1,0),&apos;Janeiro&apos;,

IF(( CreatedDate &gt;= DATETIMEVALUE(&apos;2021-01-21 00:00:00&apos;) &amp;&amp; CreatedDate &lt;= DATETIMEVALUE(&apos;2021-02-17 23:59:59&apos;)),1,0),&apos;Fevereiro&apos;,

IF(( CreatedDate &gt;= DATETIMEVALUE(&apos;2021-02-18 00:00:00&apos;) &amp;&amp; CreatedDate &lt;= DATETIMEVALUE(&apos;2021-03-22 23:59:59&apos;)),1,0),&apos;Março&apos;,

IF(( CreatedDate &gt; DATETIMEVALUE(&apos;2021-03-22 23:59:59&apos;) &amp;&amp; CreatedDate &lt; DATETIMEVALUE(&apos;2021-04-20 00:00:00&apos;)),1,0),&apos;Abril&apos;,

IF(( CreatedDate &gt;= DATETIMEVALUE(&apos;2021-04-20 00:00:00&apos;) &amp;&amp; CreatedDate &lt;= DATETIMEVALUE(&apos;2021-05-20 23:59:59&apos;)),1,0),&apos;Maio&apos;,

IF(( CreatedDate &gt;= DATETIMEVALUE(&apos;2021-05-21 00:00:00&apos;) &amp;&amp; CreatedDate &lt;= DATETIMEVALUE(&apos;2021-06-21 23:59:59&apos;)),1,0),&apos;Junho&apos;,

IF(( CreatedDate &gt;= DATETIMEVALUE(&apos;2021-06-22 00:00:00&apos;) &amp;&amp; CreatedDate &lt;= DATETIMEVALUE(&apos;2021-07-20 23:59:59&apos;)),1,0),&apos;Julho&apos;,

IF(( CreatedDate &gt;= DATETIMEVALUE(&apos;2021-07-21 00:00:00&apos;) &amp;&amp; CreatedDate &lt;= DATETIMEVALUE(&apos;2021-08-20 23:59:59&apos;)),1,0),&apos;Agosto&apos;,

IF(( CreatedDate &gt;= DATETIMEVALUE(&apos;2021-08-21 00:00:00&apos;) &amp;&amp; CreatedDate &lt;= DATETIMEVALUE(&apos;2021-09-21 23:59:59&apos;)),1,0),&apos;Setembro&apos;,

IF(( CreatedDate &gt;= DATETIMEVALUE(&apos;2021-09-22 00:00:00&apos;) &amp;&amp; CreatedDate &lt;= DATETIMEVALUE(&apos;2021-10-20 23:59:59&apos;)),1,0),&apos;Outubro&apos;,

IF(( CreatedDate &gt;= DATETIMEVALUE(&apos;2021-10-21 00:00:00&apos;) &amp;&amp; CreatedDate &lt;= DATETIMEVALUE(&apos;2021-11-19 23:59:59&apos;)),1,0),&apos;Novembro&apos;,

IF(( CreatedDate &gt;= DATETIMEVALUE(&apos;2021-11-20 00:00:00&apos;) &amp;&amp; CreatedDate &lt;= DATETIMEVALUE(&apos;2021-12-17 23:59:59&apos;)),1,0),&apos;Dezembro&apos;,

&apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competência criação</label>
    <type>Text</type>
</CustomField>