force-app/main/default/objects/ServiceAppointment/fields/Corretora__c.field-meta.xml
<CustomField>
    <fullName>Corretora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corretora</label>
    <referenceTo>Corretora__c</referenceTo>
    <relationshipLabel>Visitas</relationshipLabel>
    <relationshipName>Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>