force-app/main/default/objects/ServiceAppointment/fields/CPFCNPJ__c.field-meta.xml
<CustomField>
    <fullName>CPFCNPJ__c</fullName>
    <formula>CASE( Lead__r.RecordType.Name ,
&apos;Pessoa Física&apos;,  Lead__r.CPF__c , 
&apos;Pessoa Física RN&apos;, Lead__r.CPF__c,
&apos;Médico Cooperado&apos;, Lead__r.CPF__c,
&apos;Pessoa Jurídica&apos;, Lead__r.CNPJ__c,
&apos;Pessoa Jurídica - Enterprise&apos;, Lead__r.CNPJ__c, 
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF/CNPJ</label>
    <type>Text</type>
</CustomField>