force-app/main/default/objects/ServiceAppointment/fields/CPFCNPJId__c.field-meta.xml
<CustomField>
    <fullName>CPFCNPJId__c</fullName>
    <label>CPFCNPJId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>