force-app/main/default/objects/ServiceAppointment/fields/CriadoPorMim__c.field-meta.xml
<CustomField>
    <fullName>CriadoPorMim__c</fullName>
    <formula>CreatedById == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Criado por mim</label>
    <type>Checkbox</type>
</CustomField>