force-app/main/default/objects/ServiceAppointment/fields/distribu_o_de_visita__c.field-meta.xml
<CustomField>
    <fullName>distribu_o_de_visita__c</fullName>
    <formula>Distribui_o_de_visita__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>distribuíção de visita</label>
    <type>Text</type>
</CustomField>