force-app/main/default/objects/ServiceAppointment/fields/Distribui_o_de_visita__c.field-meta.xml
<CustomField>
    <fullName>Distribui_o_de_visita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribuição de visita</label>
    <referenceTo>DistribuicaoVisita__c</referenceTo>
    <relationshipLabel>Visitas</relationshipLabel>
    <relationshipName>Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>