force-app/main/default/objects/ServiceAppointment/fields/ExCliente__c.field-meta.xml
<CustomField>
    <fullName>ExCliente__c</fullName>
    <formula>TEXT(Lead__r.ExCliente__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ex-cliente</label>
    <type>Text</type>
</CustomField>