force-app/main/default/objects/ServiceAppointment/fields/FormattedDate__c.field-meta.xml
<CustomField>
    <fullName>FormattedDate__c</fullName>
    <formula>SUBSTITUTE(TEXT(TIMEVALUE(EarliestStartTime-(180/1440))), &apos;:00.000&apos;, &apos;&apos;)</formula>
    <label>Formatted Date</label>
    <type>Text</type>
</CustomField>