force-app/main/default/objects/ServiceAppointment/fields/FSL__Auto_Schedule__c.field-meta.xml
<CustomField>
    <fullName>FSL__Auto_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Schedule</label>
    <type>Checkbox</type>
</CustomField>