force-app/main/default/objects/ServiceAppointment/fields/FSL__GanttIcon__c.field-meta.xml
<CustomField>
    <fullName>FSL__GanttIcon__c</fullName>
    <inlineHelpText>Insira um URL para um ícone. O URL deve terminar com um sufixo de imagem, como .png.</inlineHelpText>
    <label>Gantt Icon</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>