force-app/main/default/objects/ServiceAppointment/fields/FSL__Use_Async_Logic__c.field-meta.xml
<CustomField>
    <fullName>FSL__Use_Async_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Async Logic</label>
    <type>Checkbox</type>
</CustomField>