force-app/main/default/objects/ServiceAppointment/fields/HistoricoDecisao__c.field-meta.xml
<CustomField>
    <fullName>HistoricoDecisao__c</fullName>
    <description>Salvar o Log de como foi realizaão as escolhas de roteamento.</description>
    <label>Histórico de decisão</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>