force-app/main/default/objects/ServiceAppointment/fields/MembroDaDistribuicaoDeVisita__c.field-meta.xml
<CustomField>
    <fullName>MembroDaDistribuicaoDeVisita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membro da distribuição de visita</label>
    <referenceTo>MembroDistribuicaoVisita__c</referenceTo>
    <relationshipLabel>Visitas</relationshipLabel>
    <relationshipName>Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>