force-app/main/default/objects/ServiceAppointment/fields/MotivoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>MotivoCancelamento__c</fullName>
    <label>Motivo do Cancelamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adquiriu via outra operadora</fullName>
            </value>
            <value>
                <fullName>Agendamento duplicado</fullName>
            </value>
            <value>
                <fullName>Adquiriu via e-commerce</fullName>
            </value>
            <value>
                <fullName>Cliente ausente</fullName>
            </value>
            <value>
                <fullName>Cliente desistiu da visita</fullName>
            </value>
            <value>
                <fullName>Cliente optou por ir a loja</fullName>
            </value>
            <value>
                <fullName>Cliente sem documentação</fullName>
            </value>
            <value>
                <fullName>Vendedor não compareceu</fullName>
            </value>
            <value>
                <fullName>Vendedor não localizou o endereço</fullName>
            </value>
            <value>
                <fullName>Troca de consultor para o atendimento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>