force-app/main/default/objects/ServiceAppointment/fields/MotivoReagendamento__c.field-meta.xml
<CustomField>
    <fullName>MotivoReagendamento__c</fullName>
    <label>Motivo do Reagendamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A pedido do Cliente</fullName>
            </value>
            <value>
                <fullName>Cliente Ausente</fullName>
            </value>
            <value>
                <fullName>Cliente sem Documentação</fullName>
            </value>
            <value>
                <fullName>Readequação de Agenda</fullName>
            </value>
            <value>
                <fullName>Solicitação do Vendedor</fullName>
            </value>
            <value>
                <fullName>Vendedor não Compareceu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>