force-app/main/default/objects/ServiceAppointment/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <formula>Lead__r.FirstName + &quot; &quot; + Lead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome</label>
    <type>Text</type>
</CustomField>