force-app/main/default/objects/ServiceAppointment/fields/NumeroVidas__c.field-meta.xml
<CustomField>
    <fullName>NumeroVidas__c</fullName>
    <formula>Lead__r.NumeroVidas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Vidas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>