force-app/main/default/objects/ServiceAppointment/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <formula>Lead__r.ObservacoesCompromisso__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Observações</label>
    <type>Text</type>
</CustomField>