force-app/main/default/objects/ServiceAppointment/fields/PerfilCriador__c.field-meta.xml
<CustomField>
    <fullName>PerfilCriador__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfil do criador</label>
    <type>Text</type>
</CustomField>