force-app/main/default/objects/ServiceAppointment/fields/Pessoa__c.field-meta.xml
<CustomField>
    <fullName>Pessoa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pessoa</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Visitas (Pessoa)</relationshipLabel>
    <relationshipName>Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>