force-app/main/default/objects/ServiceAppointment/fields/Promotor__c.field-meta.xml
<CustomField>
    <fullName>Promotor__c</fullName>
    <formula>CreatedBy.Profile.Name = &apos;Promotor&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotor</label>
    <type>Checkbox</type>
</CustomField>