force-app/main/default/objects/ServiceAppointment/fields/Proprietario__c.field-meta.xml
<CustomField>
    <fullName>Proprietario__c</fullName>
    <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietário</label>
    <type>Text</type>
</CustomField>