force-app/main/default/objects/ServiceAppointment/fields/ProprietarioLead__c.field-meta.xml
<CustomField>
    <fullName>ProprietarioLead__c</fullName>
    <formula>Lead__r.Owner:User.FirstName + &quot; &quot; + Lead__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietário do Lead</label>
    <type>Text</type>
</CustomField>