force-app/main/default/objects/ServiceAppointment/fields/Reagendamento__c.field-meta.xml
<CustomField>
    <fullName>Reagendamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reagendamento</label>
    <type>Checkbox</type>
</CustomField>