force-app/main/default/objects/ServiceAppointment/fields/Regiao_do_consultor__c.field-meta.xml
<CustomField>
    <fullName>Regiao_do_consultor__c</fullName>
    <formula>$User.DistribuicaoVisita__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regiao do consultor</label>
    <type>Text</type>
</CustomField>