force-app/main/default/objects/ServiceAppointment/fields/Regionalizacao__c.field-meta.xml
<CustomField>
    <fullName>Regionalizacao__c</fullName>
    <formula>ServiceTerritory.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regionalização</label>
    <type>Text</type>
</CustomField>