force-app/main/default/objects/ServiceAppointment/fields/ServiceResource__c.field-meta.xml
<CustomField>
    <fullName>ServiceResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurso de serviço</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Compromissos de serviços</relationshipLabel>
    <relationshipName>Compromissos_de_servicos</relationshipName>
    <type>Lookup</type>
</CustomField>