force-app/main/default/objects/ServiceAppointment/fields/ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>ServiceTerritory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Compromissos de serviços</relationshipLabel>
    <relationshipName>Compromissos_de_servi_os</relationshipName>
    <type>Lookup</type>
</CustomField>